新增给指定host发配
