# docs/swagger.json
@@ -72,9 +72,56 @@
                 "responses": {}
             }
         },
+        "/v1/del": {
+            "delete": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Agent配置"
+                ],
+                "summary": "删除Agent配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "认证密钥",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/v1/edit": {
+            "put": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Agent配置"
+                ],
+                "summary": "修改Agent配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "认证密钥",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/v1/get": {
             "get": {
-                "description": "对已经提交的Agent配置进行查询",
                 "consumes": [
                     "application/json"
                 ],
@@ -157,6 +204,30 @@
                 ],
                 "responses": {}
             }
+        },
+        "/v1/push_host": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Agent配置"
+                ],
+                "summary": "下发指定主机的Agent配置",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "认证密钥",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
         }
     },
     "definitions": {
@@ -198,6 +269,9 @@
                     "type": "string"
                 },
                 "role_name": {
+                    "type": "string"
+                },
+                "slot_name": {
                     "type": "string"
                 },
                 "status": {
