# web/router/server/router.go
@@ -4,7 +4,7 @@ import (
 	"bigagent_server/web/api"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
-	"github.com/swaggo/gin-swagger"
+	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 type ServerRouter struct{}
@@ -14,6 +14,7 @@ func (*ServerRouter) Router(r *gin.Engine) {
 	ServerApi := api.ApiGroupApp.ServerApiGroup
 	g.GET("/agent_id", ServerApi.SearchAgent)
 	g.POST("/push", ServerApi.PushAgentConfig)
+	g.POST("/push_host", ServerApi.PushAgentConfigByHost)
 	g.POST("/add", ServerApi.AddAgentConfig)
 	g.GET("/get", ServerApi.GetAgentConfig)
 	g.DELETE("/del", ServerApi.DelAgentConfig)
